# rolescout

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-Hant.md  pyproject.toml  setup.py  start  start.cmd
.agents/skills/application-strategy/: SKILL.md
.agents/skills/application-tracker/: SKILL.md
.agents/skills/candidate-profile-builder/: SKILL.md
.agents/skills/job-opening-research/: SKILL.md
.agents/skills/prep-interview/: SKILL.md
.agents/skills/prep-linkedin/: SKILL.md
.agents/skills/prep-resume/: SKILL.md
.agents/skills/prep-strategy/: SKILL.md
.agents/skills/target-job-group-strategy/: SKILL.md
.github/workflows/: ci.yml
references/: jd-normalization-and-progressive-universe-spec.md  local-boundaries.md  prep-quality-contract.md  prioritization-model.md  privacy-threat-model.md  project-structure.md  recruiting-sheet-schema.md  resume-bullet-rules.md  scoring-config.default.json  scoring-policy.json  search-source-registry.yaml  search-workflow.md
rolenavi/: __init__.py  application_audit.py  cli.py  decision_policy.py  doctor.py  initcmd.py  paths.py  profile_meta.py  project_meta.py  score_staging.py  universe.py
rolenavi/core/: __init__.py
rolenavi/fixtures/mock-project/: project.json
rolenavi/llm/: __init__.py  codex.py  external_cli.py  mock.py  model-profiles.json  model_profiles.py  prompts.py  runtime.py
rolenavi/llm/envelopes/: opportunity-plan.json  score.json  search.json
rolenavi/privacy/: classification.py  disclosure.py  prompt_gateway.py  retention.py  source_extract.py
rolenavi/repositories/: artifacts.py
rolenavi/runner/: __init__.py  preflight.py  workflows.py
rolenavi/search/: __init__.py  deterministic.py
rolenavi/telemetry/: __init__.py  store.py
rolenavi/web/: __init__.py  server.py  ui.html
rolescout/: __init__.py  application_audit.py  cli.py  decision_policy.py  doctor.py  initcmd.py  interview_paths.py  paths.py  profile_meta.py  project_meta.py  universe.py
rolescout/core/: __init__.py
rolescout/llm/: __init__.py  codex.py  external_cli.py  mock.py  model-profiles.json  model_profiles.py  prompts.py  runtime.py
rolescout/privacy/: __init__.py  classification.py  disclosure.py  prompt_gateway.py  retention.py  source_extract.py
rolescout/repositories/: __init__.py  artifacts.py  store.py
rolescout/runner/: __init__.py  preflight.py  workflows.py
rolescout/search/: __init__.py  deterministic.py
rolescout/telemetry/: __init__.py  store.py
rolescout/web/: __init__.py  server.py  ui.html
scripts/: analyze_search_coverage.py  analyze_search_plan.py  build_interview_context.py  build_location_search_urls.py  build_resume_docx.py  build_search_view.py  build_skills.py  capture_linkedin_profile.py  deterministic_search.py  export_store.py  fetch_url.py  finalize_score.py  generate_coverage_audit.py  grade_run.py  init_db.py  jd_text_cleaner.py  job_url_policy.py  location_eligibility.py  location_normalize.py  merge_research_parts.py  new_project.py  normalize_job_url.py  persist_job_rows.py  privacy_scan.py  probe_linkedin_jobs.py  reconcile_job_lifecycle.py  release_check.py  render_docx_gate.py  resolve_company_sources.py  schema_defs.py  score_jobs.py  store_io.py  test_deterministic_search.py  test_score_finalize.py  upsert_rows.py  validate_application_packets.py  validate_interview_prep.py  validate_job_rows.py  validate_linkedin_review.py  validate_research_artifacts.py  (+3 more)
tests/: __init__.py  test_application_workflow.py  test_contract_adversarial.py  test_data_and_artifacts.py  test_launcher.py  test_prep_preflight.py  test_prep_quality_contract.py  test_priority_score_policy.py  test_privacy_boundaries.py  test_profile_save.py  test_progressive_universe.py  test_requirement_classification.py  test_score_staging.py  test_search_preferences.py  test_universe_progress.py  test_web_security.py
tools/: install-linux.sh  install-macos.sh  install-windows.ps1  setup.sh
(+14 files in other folders)
